Use a simpler logo

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,2 +1,2 @@
-site_title: documentation
-site_logo_url: https://assets.ubuntu.com/v1/33409c7b-logo-maas.svg
+site_title: MAAS documentation
+site_logo_url: https://assets.ubuntu.com/v1/5f3d3c45-maas-logo-cropped.svg
