--- a/en/metadata.yaml
+++ b/en/metadata.yaml
@@ -4,191 +4,191 @@ navigation:
     children:
 
       - title: About MAAS
-        location: en/index.md
+        location: index.md
 
       - title: Management summary
-        location: en/intro-management.md
+        location: intro-management.md
 
       - title: Concepts and terms
-        location: en/intro-concepts.md
+        location: intro-concepts.md
 
       - title: Architectural overview
-        location: en/intro-architecture.md
+        location: intro-architecture.md
 
   - title: Install & Configure
 
     children:
 
       - title: Checklist
-        location: en/installconfig-checklist.md
+        location: installconfig-checklist.md
 
       - title: Installation
-        location: en/installconfig-install.md
+        location: installconfig-install.md
 
         children:
 
           - title: Install from Ubuntu Server ISO
-            location: en/installconfig-server-iso.md
+            location: installconfig-server-iso.md
 
           - title: Install from packages
-            location: en/installconfig-package-install.md
+            location: installconfig-package-install.md
 
           - title: Install into LXD
-            location: en/installconfig-lxd-install.md
+            location: installconfig-lxd-install.md
 
           - title: Upgrade from 1.9 to 2.0
-            location: en/installconfig-upgrade-to-2.md
+            location: installconfig-upgrade-to-2.md
 
       - title: Access the GUI
-        location: en/installconfig-gui.md
+        location: installconfig-gui.md
 
       - title: Configure network
 
         children:
 
           - title: Static IPs
-            location: en/installconfig-network-static.md
+            location: installconfig-network-static.md
 
           - title: IPv6
-            location: en/installconfig-network-ipv6.md
+            location: installconfig-network-ipv6.md
 
           - title: Proxy
-            location: en/installconfig-proxy.md
+            location: installconfig-proxy.md
 
           - title: STP
-            location: en/installconfig-network-stp.md
+            location: installconfig-network-stp.md
 
       - title: Rack controller
-        location: en/installconfig-rack.md
+        location: installconfig-rack.md
 
         children:
 
           - title: DHCP
-            location: en/installconfig-dhcp.md
+            location: installconfig-dhcp.md
 
           - title: Storage
-            location: en/installconfig-storage.md
+            location: installconfig-storage.md
 
             children:
               - title: Block devices
-                location: en/installconfig-block.md
+                location: installconfig-block.md
 
               - title: Partitions
-                location: en/installconfig-partitions.md
+                location: installconfig-partitions.md
 
       - title: Nodes
 
         children:
 
           - title: Add nodes
-            location: en/installconfig-add-nodes.md
+            location: installconfig-add-nodes.md
 
           - title: BMC power types
-            location: en/installconfig-power-types.md
+            location: installconfig-power-types.md
 
           - title: Commission nodes
-            location: en/installconfig-commission-nodes.md
+            location: installconfig-commission-nodes.md
 
           - title: Deploy nodes
-            location: en/installconfig-deploy-nodes.md
+            location: installconfig-deploy-nodes.md
 
           - title: Tags
-            location: en/installconfig-tags.md
+            location: installconfig-tags.md
 
           - title: Kernel boot options
-            location: en/installconfig-kernel.md
+            location: installconfig-kernel.md
 
           - title: HWE kernels
-            location: en/installconfig-hwe-kernels.md
+            location: installconfig-hwe-kernels.md
 
       - title: Images
-        location: en/installconfig-images.md
+        location: installconfig-images.md
 
         children:
 
           - title: Selection and import
-            location: en/installconfig-images-import.md
+            location: installconfig-images-import.md
 
           - title: Local image mirror
-            location: en/installconfig-images-mirror.md
+            location: installconfig-images-mirror.md
 
   - title: Manage MAAS
 
     children:
 
       - title: Zones
-        location: en/manage-zones.md
+        location: manage-zones.md
 
       - title: User accounts
-        location: en/manage-account.md
+        location: manage-account.md
 
         children:
 
           - title: Add user
-            location: en/manage-account.md#add-a-user
+            location: manage-account.md#add-a-user
 
           - title: SSH keys
-            location: en/manage-account.md#ssh-keys
+            location: manage-account.md#ssh-keys
 
           - title: API key
-            location: en/manage-account.md#api-key
+            location: manage-account.md#api-key
 
           - title: Change password
-            location: en/manage-account.md#change-the-password
+            location: manage-account.md#change-the-password
 
       - title: High availability (HA)
-        location: en/manage-maas-ha.md
+        location: manage-maas-ha.md
 
         children:
 
           - title: Rack controller HA
-            location: en/manage-maas-ha.md#rack-controller-ha
+            location: manage-maas-ha.md#rack-controller-ha
 
           - title: Region controller HA
-            location: en/manage-maas-ha.md#region-controller-ha
+            location: manage-maas-ha.md#region-controller-ha
 
           - title: Deploy HA with Juju
-            location: en/manage-maas-ha.md#deploy-ha-with-juju
+            location: manage-maas-ha.md#deploy-ha-with-juju
 
       - title: MAAS CLI
-        location: en/manage-cli.md
+        location: manage-cli.md
 
         children:
 
           - title: Common tasks
-            location: en/manage-cli-common.md
+            location: manage-cli-common.md
 
           - title: Image management
-            location: en/manage-cli-images.md
+            location: manage-cli-images.md
 
           - title: DHCP snippet management
-            location: en/manage-cli-dhcp-snippets.md
+            location: manage-cli-dhcp-snippets.md
 
           - title: Advanced tasks
-            location: en/manage-cli-advanced.md
+            location: manage-cli-advanced.md
 
   - title: Troubleshoot
 
     children:
 
       - title: FAQ
-        location: en/troubleshoot-faq.md
+        location: troubleshoot-faq.md
 
       - title: Getting help
-        location: en/troubleshoot-getting-help.md
+        location: troubleshoot-getting-help.md
 
   - title: Release notes
-    location: en/ref-release-notes.md
+    location: ref-release-notes.md
 
   - title: Developer guide
-    location: en/http://maas.ubuntu.com/docs/index.md#developing-maas
+    location: http://maas.ubuntu.com/docs/index.md#developing-maas
 
   - title: API documentation
-    location: en/http://maas.ubuntu.com/docs/api.md
-    location: en/http://maas.ubuntu.com/docs2.0/api.md
+    location: http://maas.ubuntu.com/docs/api.md
+    location: http://maas.ubuntu.com/docs2.0/api.md
 
   - title: Help improve these docs
-    location: en/contributing.md
+    location: contributing.md
 
   - title: Report a docs issue
     location: https://github.com/CanonicalLtd/maas-docs/issues/new
